# elparadisogonzalo-monorepo

./: ..env.swp  .bash_history  .bashrc  .bashrc.backup  .boto  .env  .git-credentials  .gitattributes  .gitconfig  .gitcookies  .gitignore  .gitmodules  .manifest  .npmrc  .python_history  .vsconfig  App.tsx  BNB Smart Chain Wallet.json  CHANGELOG.md  CNAME  Dockerfile  EDITOR  ELPARADISOGONZALO_wiki.md  Ethereum Wallet 4.json  Ethereum Wallet 5.json  Github-oauth-server  HTML  Home.md  InitContract  LICENSE  Main Wallet .json  Main Wallet 1.json  PinataSDK  README.md  ReleaseNotes.html  SAML  SECURITY.md  WalletConnect.jsx  ai_workflow.sh  background.js  (+77 more)
.android/: gitconfig
.cargo/: .global-cache  Cargo.toml
.cargo/my_project/: Cargo.toml
.cargo/my_project/src/: lib.rs  main.rs
.devcontainer/: docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  assets.config.yaml  dependabot.yml  koa FUNDING.yml  koa _FUNDING.yml  koagonzalo11_FUNDING.yml
.gnupg/: gpg.conf  pubring.kbx  pubring.kbx~  trustdb.gpg
.ssh/: id_ed25519
GitHub-Hookshot/: bebe1c7
Github-oauth-server-folder/: index.js  package-lock.json  package.json
actions-runner/: .credentials  .credentials_rsaparams  .path  .runner  svc.sh
backup-keys/: 0CC2A8E3DFF0C2984069D0156849BC55A028AB34.key
client/: package.json
elparadisogonzalo/: label.yml  package-lock.json
examples/: README.md
frontend/: index.html  main.js  package-lock.json  package.json  pgsql
ios-branch-deep-linking-attribution-1/: Index.js
koagonzalo11/: Koa11 2.json  Koa11.json  Main Wallet 2.json  Main Wallet 3.json  (+4 more)
(+86 files in other folders)
